# AI-memory

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
ai_memory/: __init__.py  __main__.py  api_surface.py  callers.py  cli.py  communities.py  config.py  coverage_overlay.py  cycles.py  db.py  dead_code.py  embeddings.py  extractors.py  flows.py  formatter.py  fts_search.py  git_review.py  graph_export.py  import_resolver.py  inheritance.py  languages.py  manifest_parser.py  mcp_server.py  prompt_builder.py  rules_generator.py  scanner.py  schema_parser.py  test_mapper.py  todo_extractor.py  watcher.py
