[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-memory"
version = "0.1.0"
description = "Self-updating codebase knowledge graph for AI-powered IDEs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arbaz Nazir", email = "arbaznazir4@gmail.com"}]
keywords = ["ai", "memory", "codebase", "knowledge-graph", "token-saving", "windsurf", "cursor"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "watchdog>=3.0",
    "rich>=13.0",
    "click>=8.1",
    "toml>=0.10",
    "pyyaml>=6.0",
]

[project.scripts]
ai-memory = "ai_memory.cli:cli"
ai-memory-mcp = "ai_memory.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Arbaznazir/AI-memory"
Repository = "https://github.com/Arbaznazir/AI-memory"
Issues = "https://github.com/Arbaznazir/AI-memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_memory*"]
